add: public API and changed yml
